# mcp-amadeushotels

./: .dockerignore  .gitignore  AUTHENTICATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  HOTEL_BOOKING_V2.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.example  flights.json  plan.md  pyproject.toml  render.yaml  requirements.txt  run_server.py  uv.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AUTHENTICATION.md  MULTITHREADING_IMPLEMENTATION.md  STRUCTURE.md
examples/: example_usage.py  multithreading_example.py
src/: __init__.py  amadeus_client.py  cache.py  config.py  h.json  main.py  models.py  performance_monitor.py  tools.py
tests/: test_amadeus_hotels.py  test_authentication.py  test_server_integration.py
